# Waraja

./: .gitignore  CONTRIBUTING.md  README.md  package.json  tsconfig.json  vite.config.ts
src/backend/: Cargo.toml  tauri.conf.json
src/backend/capabilities/: default.json
src/backend/src/: bundler.rs  main.rs
src/frontend/: index.html  index.tsx
src/frontend/assets/styles/: animations.css  main.css
src/frontend/components/: Formatted.tsx  Header.tsx
src/frontend/screens/: Challange.tsx  Create.tsx  Home.tsx  Import.tsx
src/frontend/scripts/: Library.ts  utilities.ts
src/frontend/scripts/challenge/: Dataset.ts  Manifest.ts  Project.ts  Question.ts
src/frontend/scripts/challenge/templates/: dataset.json  minifest.json
