[package]
name = "waraja"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waraja"
path = "./src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "4.3.0"
sha2 = "0.10.9"
hex = "0.4.3"
